# packages/shared/src/types/rule.types.ts
@@ -2,7 +2,6 @@ export type Rule = {
 	id?: number;
 	issuerId: number;
 	pattern: string;
-	categoryOverride?: number;
 	matchCount: number;
 	createdAt: Date;
 };
